--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
